Fixed hero section full height on mobile, rearange mobile menu close icon to the top

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -186,3 +186,7 @@ button {
 .debug {
   @apply border-2 border-red-600;
 }
+
+.height__100vh {
+  height: calc(100vh - 72px);
+}
